--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,12 @@ dist.jar=${dist.dir}/hpvs-2013-1-4-257664.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.25-bin.jar=C:\\Users\\Home\\Documents\\mysql-connector-java-5.1.25-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.ConectorMySQL.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.25-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
